XIVY-15630 Fix overflow table

--- a/packages/dataclass-editor/src/master/DataClassMasterContent.css
+++ b/packages/dataclass-editor/src/master/DataClassMasterContent.css
@@ -1,6 +1,7 @@
 .master-content-container {
   height: 100%;
   padding: var(--size-3);
+  overflow: auto;
 }
 
 .master-content {
